// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_g78afx0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <legend
                class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir933p"
            >
              <div
                aria-disabled="false"
                class="uv_g78afx1 uv_1pz5vwp1 uv_1pz5vwp0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="uv_1pz5vwp4 uv_1pz5vwp3"
                  id="_r_3_"
                  name="Checkbox.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="uv_1pz5vwp7 uv_1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Checkbox.value-1
                  </title>
                  <g>
                    <rect
                      class="uv_1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_mxir930 uv_mxir932d uv_mxir935j"
                  style="--uv_1o893js3: 1;"
                >
                  <div
                    class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j"
                  >
                    <label
                      class="uv_1pz5vwpc uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_3_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="uv_g78afx1 uv_1pz5vwp1 uv_1pz5vwp0"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  class="uv_1pz5vwp4 uv_1pz5vwp3"
                  id="_r_8_"
                  name="Checkbox.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="uv_1pz5vwp7 uv_1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Checkbox.value-2
                  </title>
                  <g>
                    <rect
                      class="uv_1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_mxir930 uv_mxir932d uv_mxir935j"
                  style="--uv_1o893js3: 1;"
                >
                  <div
                    class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j"
                  >
                    <label
                      class="uv_1pz5vwpc uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_8_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_g78afx0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                class="uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j"
              >
                <legend
                  class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
                >
                  CheckboxGroupField events
                </legend>
                <span
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak89 uv_1yhcak8n uv_1yhcak81a uv_1yhcak82m"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir933p"
            >
              <div
                aria-disabled="false"
                class="uv_g78afx1 uv_1pz5vwp1 uv_1pz5vwp0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="uv_1pz5vwp4 uv_1pz5vwp3"
                  id="_r_i_"
                  name="test.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="uv_1pz5vwp7 uv_1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    test.value-1
                  </title>
                  <g>
                    <rect
                      class="uv_1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_mxir930 uv_mxir932d uv_mxir935j"
                  style="--uv_1o893js3: 1;"
                >
                  <div
                    class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j"
                  >
                    <label
                      class="uv_1pz5vwpc uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_i_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="uv_g78afx1 uv_1pz5vwp1 uv_1pz5vwp0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="uv_1pz5vwp4 uv_1pz5vwp3"
                  id="_r_n_"
                  name="test.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="uv_1pz5vwp7 uv_1pz5vwp6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    test.value-2
                  </title>
                  <g>
                    <rect
                      class="uv_1pz5vwp9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_1pz5vwpa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_mxir930 uv_mxir932d uv_mxir935j"
                  style="--uv_1o893js3: 1;"
                >
                  <div
                    class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j"
                  >
                    <label
                      class="uv_1pz5vwpc uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_n_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
